# Where-s-Waldo-

./: CMakeLists.txt  README.md  main.cpp  waldoDetector.cpp  waldoDetector.h
